fix: skeleton gradient overflow

--- a/src/components/skeleton/skeleton.scss
+++ b/src/components/skeleton/skeleton.scss
@@ -12,6 +12,8 @@
   }
 
   &.skeleton-gradient {
+    overflow: hidden;
+
     &::before {
       content: '';
       position: absolute;
